# face

./: .gitignore  .performanceTestingBot  .restyled.yml  Dockerfile.cpu  Dockerfile.gpu  Info.plist  Paimon tcalya.rar  Python.patch  face-azure-pipelines.yml  iheobagjkfklnlikgihanlhcddjoihkg.crx  requirements.txt  setup.py  tools.py  version
.github/: PAUL.yaml  foresight-workflow-kit-action.yaml  gitstream.cm  json-to-file.yml
.github/workflows/: action-gobrew.yml  action-pylint.yml  action-pypi-release.yml  action-xcode-staple.yml  actions-pipenv.yml  actions-poetry.yml  api-json-action.yml  azure-pipelines-6.yml  azure-webapps-python.yml  cccc-action.yml  check-python-version.yml  cmake.yml  codacy.yml  codenamize-action.yml  codeql.yml  datadog-synthetics.yml  django.yml  dotnet-desktop.yml  dotnet.yml  foresight-workflow-kit-action.yaml  foresight-workflow-kit-action.yml  generate.yaml  get-version-from-package-json.yml  gitguardian  gitguardian.yml  go-ossf-slsa3-publish.yml  go.yml  gradle-publish.yml  gradle.yml  json-to-file.yml  node.js.yml  npm-grunt.yml  npm-gulp.yml  php.yml  pip-install.yml  pytest.yml  python-app.yml  python-package-conda.yml  python-package.yml  python-publish.yml  (+15 more)
Bobber-6.3.1/: requirements.txt
PRNet-master/: api.py  demo.py  demo_texture.py
PRNet-master/utils/: cv_plot.py  render.py  rotate_vertices.py
SwapNet-jwyang-roi-version/: Dockerfile  train.py
SwapNet-jwyang-roi-version/datasets/: __init__.py  data_utils.py  warp_dataset.py
SwapNet-jwyang-roi-version/models/: base_model.py  pix2pix_model.py
SwapNet-jwyang-roi-version/modules/: __init__.py  discriminators.py  loss.py  swapnet_modules.py
SwapNet-jwyang-roi-version/modules/losses/: __init__.py  adversarial.py
SwapNet-jwyang-roi-version/util/: decode_labels.py
deep-learning-models-0.8/: inception_v3.py  music_tagger_crnn.py  vgg16.py  vgg19.py
docs/: sphinx_requirements.txt
generator-1.9.5/: package.json
generator-main/: requirements.txt
javascript-action-1.0.1/: package-lock.json  package.json
lib/: config.py  sysinfo.py  utils.py
lib/gpu_stats/: _base.py  amd.py
lib/gui/: display_command.py  options.py  popup_session.py  project.py  wrapper.py
lib/gui/analysis/: event_reader.py
lib/model/: initializers.py  nn_blocks.py
module/: Info.plist  config.json  iwf-encode.txt  ms-devlabs.FolderManagement-1.3.125.vsix  non-cipa-encode.txt
module/.github/workflows/: setup-swift-beta.yml
module/module1/module/module1/module/module1/module/module/module/: setup.cfg
module/module1/module/module1/module/module1/module/module/module/module/module/Data-Pixels-1.1.0/: package.json
module/module1/module/module1/module/module1/module/module/module/module1/requirements/: requirements_amd.txt
module2/module/WomboArt-main/: README.md
module2/module/module/module/module2/module/module1/module/module/module/module/module/module/module/module/module/module/module/module/module/module/module/module/module/artbot-master/: pyproject.toml
nft-art-generator-main/: package-lock.json
parametric-face-image-generator-2.1.1/: build.sbt
parametric-face-image-generator-2.1.1/project/: assembly.sbt
plugins/convert/mask/: mask_blend.py
plugins/convert/writer/: _base.py  opencv.py
plugins/extract/: pipeline.py
plugins/extract/align/: cv2_dnn.py
plugins/extract/detect/: _base.py  mtcnn.py
plugins/extract/mask/: bisenet_fp.py  components.py  extended.py
plugins/train/trainer/: _base.py
pyproject.toml/: pyproject.toml
requirements/: _requirements_base.txt  requirements_amd.txt  requirements_cpu.txt  requirements_nvidia.txt
scripts/: extract.py  fsmedia.py  train.py
setup-python-4.2.0/__tests__/data/: requirements.txt
sprites-as-a-service-0.5.0/frontend/: package-lock.json  package.json
tools/alignments/: media.py
tools/manual/: manual.py
tools/mask/: mask.py
(+220 files in other folders)
