[isort]
default_section = FIRSTPARTY
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = accelerate
known_third_party =
    numpy
    torch
    torch_xla

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True

[flake8]
ignore = E203, E722, E501, E741, W503, W605
max-line-length = 119
per-file-ignores = __init__.py:F401

[flake8]
max-line-length = 99
max-complexity=10
statistics = True
count = True
exclude = .git, __pycache__

[mypy]
[mypy-cv2.*]
ignore_missing_imports = True
[mypy-fastcluster.*]
ignore_missing_imports = True
[mypy-ffmpy.*]
ignore_missing_imports = True
[mypy-imageio.*]
ignore_missing_imports = True
[mypy-imageio_ffmpeg.*]
ignore_missing_imports = True
[mypy-keras.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-numexpr.*]
ignore_missing_imports = True
[mypy-pexpect.*]
ignore_missing_imports = True
[mypy-PIL.*]
ignore_missing_imports = True
[mypy-plaidml.*]
ignore_missing_imports = True
[mypy-psutil.*]
ignore_missing_imports = True
[mypy-pynvml.*]
ignore_missing_imports = True
[mypy-pynvx.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-sklearn.*]
ignore_missing_imports = True
[mypy-tensorflow.*]
ignore_missing_imports = True
[mypy-tensorflow_probability.*]
ignore_missing_imports = True
[mypy-tqdm.*]
ignore_missing_imports = True
[mypy-win32console.*]
ignore_missing_imports = True
[mypy-winpty.*]
ignore_missing_imports = True

[flake8]
max-line-length = 99
max-complexity=10
statistics = True
count = True
exclude = .git, __pycache__

[mypy]
[mypy-cv2.*]
ignore_missing_imports = True
[mypy-fastcluster.*]
ignore_missing_imports = True
[mypy-imageio.*]
ignore_missing_imports = True
[mypy-imageio_ffmpeg.*]
ignore_missing_imports = True
[mypy-keras.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-numexpr.*]
ignore_missing_imports = True
[mypy-pexpect.*]
ignore_missing_imports = True
[mypy-PIL.*]
ignore_missing_imports = True
[mypy-plaidml.*]
ignore_missing_imports = True
[mypy-psutil.*]
ignore_missing_imports = True
[mypy-pynvml.*]
ignore_missing_imports = True
[mypy-pynvx.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-tensorflow.*]
ignore_missing_imports = True
[mypy-tensorflow_probability.*]
ignore_missing_imports = True
[mypy-tqdm.*]
ignore_missing_imports = True
[mypy-winpty.*]
ignore_missing_imports = True

[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
# note: we ignore all 501s (line too long) anyway as they're taken care of by black
max-line-length = 79
ignore = E203, E402, W503, W504, E501
per-file-ignores =
    __init__.py: F401, F403, F405
    ./hubconf.py: F401
    test/smoke_test.py: F401
    test/smoke_test_deps.py: F401
    test_*.py: F841, E731, E266
exclude = venv

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring

