[tool.poetry]
name = "artbot"
version = "0.1.0"
description = "A bot to automatically create art from wombo.ai"
authors = ["Tag-Epic <tagepicuwu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
nextcord = {git = "https://github.com/nextcord/nextcord-v3/"}
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
